fixed border contrast on unselected option

--- a/src/Bootstrap/less/theme/page-list-packages.less
+++ b/src/Bootstrap/less/theme/page-list-packages.less
@@ -190,7 +190,7 @@
         color: #555;
         font-size: x-small;
         background-color: #d9d9d9;
-        border: 1px solid rgba(0,0,0,.15);
+        border: 1px solid #898989;
       }
 
       input:checked + label {
@@ -203,11 +203,13 @@
       label[for="all-selector"] {
         border-top-left-radius: 2px;
         border-bottom-left-radius: 2px;
+        border-right: hidden;
       }
 
       label[for="any-selector"] {
         border-top-right-radius: 2px;
         border-bottom-right-radius: 2px;
+        border-left: hidden;
       }
     }
   }
